syntax = "proto3";
package electra.voter;

import "electra/voter/poll.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "electra/x/voter/types";

// Msg defines the Msg service.
service Msg {
    rpc CreatePoll(MsgCreatePoll) returns (MsgCreatePollResponse);
  rpc UpdatePoll(MsgUpdatePoll) returns (MsgUpdatePollResponse);
  rpc DeletePoll(MsgDeletePoll) returns (MsgDeletePollResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreatePoll {
  string creator = 1;
  string title = 2;
  string options = 3;
}

message MsgCreatePollResponse {
  uint64 id = 1;
}

message MsgUpdatePoll {
  string creator = 1;
  uint64 id = 2;
  string title = 3;
  string options = 4;
}

message MsgUpdatePollResponse {}

message MsgDeletePoll {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeletePollResponse {}

// this line is used by starport scaffolding # proto/tx/message
